fix cropped cards (#3799)

--- a/src/interface/src/styleguide/action-card/action-card.component.scss
+++ b/src/interface/src/styleguide/action-card/action-card.component.scss
@@ -16,6 +16,7 @@
 
   /* shadow-md */
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.16);
+  box-sizing: border-box;
 }
 
 .svg-icon {
